apps/paperless-ngx/base/paperless-ngx/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.36.2/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: paperless-ngx
        image: ghcr.io/paperless-ngx/paperless-ngx
        ports:
        - containerPort: 8000
          protocol: TCP
        volumeMounts:
        - name: run
          mountPath: /run
        - name: data
          mountPath: /usr/src/paperless/data
        - name: media
          mountPath: /usr/src/paperless/media
        - name: ca-bundle
          mountPath: /bundle.pem
          subPath: bundle.pem
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsUser: 1000
          runAsGroup: 1000
        readinessProbe:
          httpGet:
            port: 8000
      volumes:
      - name: run
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: paperless-ngx-data
      - name: media
        persistentVolumeClaim:
          claimName: paperless-ngx-media
      - name: ca-bundle
        configMap:
          name: paperless-ngx-cluster-ca
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
