apps/paperless-ngx/base/paperless-ngx/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.36.2/service.json
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  ports:
  - name: http
    port: 8000
