apps/paperless-ngx/base/paperless-ngx/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: paperless-ngx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: paperless.seigra.net
    name: paperless-ngx
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ''
        kind: Secret
        name: paperless-gateway-tls
      mode: Terminate
