apps/paperless-ngx/base/paperless-ngx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
spec:
  hostnames:
  - paperless.seigra.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: paperless-ngx
    sectionName: paperless-ngx
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: paperless-ngx
      namespace: paperless-ngx
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
